--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -33,7 +33,7 @@ steps:
 
   - wait
 
-  - name: ":codeclimate:" #TODO: need to sum coverage
+  - name: ":codeclimate:"
       plugins:
         - jobready/codeclimate-test-reporter#v2.0:
             artifact: "coverage/.resultset.json"
