--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -36,12 +36,8 @@ steps:
   - name: ":codeclimate:"
     plugins:
       - jobready/codeclimate-test-reporter#v2.0:
-          artifact: 
-            - "coverage/.resultset.json"
-            - "coverage/lcov.info"
-          input_type: 
-            - simplecov
-            - lcov
+          artifact: "coverage/.resultset.json"
+          input_type: simplecov
           prefix: '/var/lib/buildkite-agent/builds/enterprise-oss-bk-1/enterpriseoss/osso/'
 
   - wait 
