--- a/client/.babelrc
+++ b/client/.babelrc
@@ -4,7 +4,8 @@
       "import",
       {
         "libraryName": "antd",
-        "libraryDirectory": "lib" // TODO: esm
+        "libraryDirectory": "es",
+        "style": "css"
       },
       "import-antd"
     ],
