--- a/client/.babelrc
+++ b/client/.babelrc
@@ -4,8 +4,7 @@
       "import",
       {
         "libraryName": "antd",
-        "libraryDirectory": "es",
-        "style": "css"
+        "libraryDirectory": "es" // TODO: esm
       },
       "import-antd"
     ],
