--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "autoprefixer": "^9.8.6",
     "babel-plugin-import": "^1.13.0",
     "browserslist": "^4.14.0",
+    "chrome-remote-interface": "^0.28.2",
+    "chromium": "^3.0.1",
     "cypress": "^5.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
