Add Cypress tests for OAuth Clients and Identity Providers

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 node_modules
 .env
-.parcel-cache
 yarn-error.log
 .DS_Store
 public/*
@@ -12,4 +11,5 @@ coverage
 cypress/screenshots
 cypress/videos
 cypress/fixtures
+cypress/downloads
 parcel-bundle-reports/
