--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "clean": "rm -rf client/dist && rm -rf .parcel-cache",
     "test": "jest",
     "lint": "eslint 'client/src/**/*.{js,jsx,ts,tsx}'",
-    "lintfix": "eslint 'client/src/**/*.{js,jsx,ts,tsx}' --fix",
-    "build:theme": "lessc --js ./client/src/index.less ./client/src/antd.css"
+    "lintfix": "eslint 'client/src/**/*.{js,jsx,ts,tsx}' --fix"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -64,6 +63,7 @@
     "@ant-design/icons": "^4.2.2",
     "@apollo/client": "^3.1.4",
     "@enterprise-oss/osso": "^0.0.5-alpha.44",
+    "ant-theme": "file:.yalc/ant-theme",
     "antd": "^4.6.2",
     "date-fns": "^2.16.1",
     "fast-xml-parser": "^3.17.4",
