--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
     "@ant-design/colors": "^4.0.5",
     "@ant-design/icons": "^4.2.2",
     "@apollo/client": "^3.1.4",
+    "@enterprise-oss/ant-theme": "^1.0.0",
     "@enterprise-oss/osso": "^0.0.5-alpha.44",
-    "ant-theme": "file:.yalc/ant-theme",
     "antd": "^4.6.2",
     "date-fns": "^2.16.1",
     "fast-xml-parser": "^3.17.4",
