--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
     "moduleNameMapper": {
       "\\.(png|svg)$": "<rootDir>/client/__mocks__/fileMock.js",
       "\\.(css|less)$": "identity-obj-proxy",
-      "~(.*)$": "<rootDir>/$1"
+      "~(.*)$": "<rootDir>/$1",
+      "@enterprise-oss/ant-theme": "identity-obj-proxy"
     },
     "testPathIgnorePatterns": [
       "<rootDir>/.yalc/*",
