--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "description": "Open Source Single Sign-On - authenticate SAML users from SSO IDPs into your application",
   "keywords": [
     "enterprise",
-    "sso",
+    "SSO",
     "SAML"
   ],
   "logo": "https://www.ossoapp.com/img/logo.svg",
