--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "@ant-design/icons": "^4.2.2",
     "@apollo/client": "^3.1.5",
     "@enterprise-oss/ant-theme": "^1.0.0",
-    "@enterprise-oss/osso": "^0.0.5-alpha.44",
+    "@enterprise-oss/osso": "file:.yalc/@enterprise-oss/osso",
     "antd": "^4.6.3",
     "date-fns": "^2.16.1",
     "fast-xml-parser": "^3.17.4",
