--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "@ant-design/icons": "^4.2.2",
     "@apollo/client": "^3.2.1",
     "@enterprise-oss/ant-theme": "^1.0.1",
-    "@enterprise-oss/osso": "^0.0.7-gamma",
+    "@enterprise-oss/osso": "^0.0.7-delta",
     "antd": "^4.6.5",
     "date-fns": "^2.16.1",
     "fast-xml-parser": "^3.17.4",
