--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -39,10 +39,15 @@ steps:
     commands:
       - '.buildkite/report-coverage.sh'
 
-  - wait 
+  - wait
+
+  - name: ":broom:"
+    commands: "yarn clean"
+    branches: "main"
+
+  - wait
 
   - commands:
-      - "yarn clean"
       - "yarn install"
       - "yarn build"
       - "yarn cypress:ci"
