--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "less": "^3.12.2",
     "parcel": "2.0.0-nightly.425",
     "parcel-plugin-bundle-visualiser": "^1.2.0",
+    "postcss": "^8.1.1",
     "postcss-modules": "^3.2.2",
     "prettier": "^2.1.2",
     "start-server-and-test": "^1.11.5",
