--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
   "logo": "https://www.ossoapp.com/img/logo.svg",
   "repository": "https://github.com/enterprise-oss/osso",
   "website": "https://ossoapp.com",
-  "success_url": "https://ossoapp.com/docs/guides/deployment#post-deployment",
+  "success_url": "/create-account",
   "buildpacks": [
     {
       "url": "heroku/ruby"
