--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@ant-design/icons": "^4.2.2",
     "@apollo/client": "^3.2.4",
     "@enterprise-oss/ant-theme": "^1.0.1",
-    "@enterprise-oss/osso": "^0.0.7-eta",
+    "@enterprise-oss/osso": "file:.yalc/@enterprise-oss/osso",
     "antd": "^4.7.0",
     "date-fns": "^2.16.1",
     "fast-xml-parser": "^3.17.4",
