--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@ant-design/icons": "^4.2.2",
     "@apollo/client": "^3.2.5",
     "@enterprise-oss/ant-theme": "^1.0.1",
-    "@enterprise-oss/osso": "file:.yalc/@enterprise-oss/osso",
+    "@enterprise-oss/osso": "0.0.9-alpha.6",
     "antd": "^4.7.3",
     "date-fns": "^2.16.1",
     "fast-xml-parser": "^3.17.4",
