--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@ant-design/icons": "^4.2.2",
     "@apollo/client": "^3.2.5",
     "@enterprise-oss/ant-theme": "^1.0.6",
-    "@enterprise-oss/osso": "^0.0.7-eta",
+    "@enterprise-oss/osso": "^0.0.9-alpha.7",
     "antd": "^4.7.3",
     "date-fns": "^2.16.1",
     "fast-xml-parser": "^3.17.4",
