--- a/app.json
+++ b/app.json
@@ -41,7 +41,7 @@
       "description": "A domain you own and can send SMTP emails from"
     },
     "SMTP_PORT": {
-      "value": 25
+      "value": "25"
     },
     "SMTP_SERVER": {
       "description": "The location of your SMTP server for sending email, i.e. smtp.mailgun.org"
