Use hobby dyno in app.json

--- a/app.json
+++ b/app.json
@@ -56,5 +56,11 @@
     "review": {
       "addons": []
     }
+  },
+  "formation": {
+    "web": {
+      "quantity": 1,
+      "size": "hobby"
+    }
   }
 }
