Add postdeploy to app.json

--- a/app.json
+++ b/app.json
@@ -62,5 +62,8 @@
       "quantity": 1,
       "size": "hobby"
     }
+  },
+  "scripts": {
+    postdeploy: "bundle exec rake osso:bootstrap"
   }
 }
