Add postdeploy to app.json

--- a/app.json
+++ b/app.json
@@ -64,6 +64,6 @@
     }
   },
   "scripts": {
-    postdeploy: "bundle exec rake osso:bootstrap"
+    "postdeploy": "bundle exec rake osso:bootstrap"
   }
 }
