--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -4,6 +4,13 @@ on:
   pull_request:
 
 jobs:
+  auto-approve:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: hmarr/auto-approve-action@v2.0.0
+      if: github.actor == 'dependabot[bot]' || github.actor == 'mergify[bot]'
+      with:
+        github-token: "${{ secrets.GITHUB_TOKEN }}"
   auto-merge:
     runs-on: ubuntu-latest
     steps:
