--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -7,15 +7,20 @@ jobs:
   auto-approve:
     runs-on: ubuntu-latest
     steps:
-    - uses: hmarr/auto-approve-action@v2.0.0
-      if: github.actor == 'dependabot[bot]' || github.actor == 'mergify[bot]'
-      with:
-        github-token: "${{ secrets.TOKEN }}"
-  auto-merge:
-    runs-on: ubuntu-latest
-    steps:
+      - name: Wait on CI
+        uses: lewagon/wait-on-check-action@v0.1
+        with:
+          ref: main # can be commit SHA or tag too
+          check-name: buildkite/osso # name of the existing check
+          repo-token: ${{ secrets.TOKEN }}
+          wait-interval: 3000 # seconds 
       - uses: actions/checkout@v2
       - uses: ahmadnassri/action-dependabot-auto-merge@v2
         with:
           target: minor
           github-token: ${{ secrets.TOKEN }}
+      - uses: hmarr/auto-approve-action@v2.0.0
+        if: github.actor == 'dependabot[bot]'
+        with:
+          github-token: "${{ secrets.TOKEN }}"
+      
