--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Wait on CI
         uses: lewagon/wait-on-check-action@v0.1
         with:
-          ref: main # can be commit SHA or tag too
+          ref: ${{ github.base_ref }}
           check-name: buildkite/osso # name of the existing check
           repo-token: ${{ secrets.TOKEN }}
           wait-interval: 3000 # seconds 
