--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -7,13 +7,13 @@ jobs:
   auto-approve:
     runs-on: ubuntu-latest
     steps:
-      - name: Wait on CI
-        uses: lewagon/wait-on-check-action@v0.1
-        with:
-          ref: ${{ github.sha }}
-          check-name: buildkite/osso # name of the existing check
-          repo-token: ${{ secrets.TOKEN }}
-          wait-interval: 3000 # seconds 
+#       - name: Wait on CI
+#         uses: lewagon/wait-on-check-action@v0.1
+#         with:
+#           ref: ${{ github.sha }}
+#           check-name: buildkite/osso # name of the existing check
+#           repo-token: ${{ secrets.TOKEN }}
+#           wait-interval: 3000 # seconds 
       - uses: actions/checkout@v2
       - uses: ahmadnassri/action-dependabot-auto-merge@v2
         with:
