--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "jest-fetch-mock": "^3.0.3",
     "jsonwebtoken": "^8.5.1",
     "less": "^3.12.2",
-    "parcel": "2.0.0-nightly.447",
+    "parcel": "2.0.0-nightly.462",
     "parcel-plugin-bundle-visualiser": "^1.2.0",
     "postcss": "^8.1.10",
     "postcss-modules": "^3.2.2",
@@ -64,7 +64,7 @@
     "@ant-design/icons": "^4.2.2",
     "@apollo/client": "^3.2.7",
     "@enterprise-oss/ant-theme": "^1.0.6",
-    "@enterprise-oss/osso": "^0.0.9",
+    "@enterprise-oss/osso": "^0.1.0-alpha.1",
     "antd": "^4.8.5",
     "date-fns": "^2.16.1",
     "fast-xml-parser": "^3.17.4",
