override formation in review env

--- a/app.json
+++ b/app.json
@@ -54,7 +54,13 @@
   ],
   "environments": {
     "review": {
-      "addons": []
+      "addons": [],
+      "formation": {
+        "web": {
+          "quantity": 1,
+          "size": "free"
+        }
+      }
     }
   },
   "formation": {
