--- a/.parcelrc
+++ b/.parcelrc
@@ -2,6 +2,6 @@
   "extends": "@parcel/config-default",
   "transformers": {
     "*.svg": ["@parcel/transformer-svg-react"],
-    "*.{jpg,png}": ["@parcel/transformer-raw"]
+    "*.{jpg,png}": ["@parcel/transformer-raw"],
   }
 }
