--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "clean": "rm -rf client/dist && rm -rf .parcel-cache && git clean -f ./public/",
     "test": "jest",
     "lint": "eslint 'client/src/**/*.{js,jsx,ts,tsx}'",
-    "lintfix": "eslint 'client/src/**/*.{js,jsx,ts,tsx}' --fix"
+    "lintfix": "eslint 'client/src/**/*.{js,jsx,ts,tsx}' --fix",
+    "heroku-postbuild": "parcel build assets/end-user.css assets/admin.css assets/end-user.js --dist-dir public"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
