--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,8 @@ node_modules
 .env
 yarn-error.log
 .DS_Store
-not-public/*
+public/*
 !public/favicon
-!public/pdfv1/
-!public/logos/
-!public/styles.css
 **dist
 .yalc
 yalc.lock
