--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "clean": "rm -rf client/dist && rm -rf .parcel-cache && git clean -f ./public/",
     "test": "jest",
     "lint": "eslint 'client/src/**/*.{js,jsx,ts,tsx}'",
-    "lintfix": "eslint 'client/src/**/*.{js,jsx,ts,tsx}' --fix",
-    "heroku-postbuild": "parcel build assets/end-user.css assets/admin.css assets/end-user.js --dist-dir public"
+    "lintfix": "eslint 'client/src/**/*.{js,jsx,ts,tsx}' --fix"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -74,6 +73,14 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "use-debounce": "^5.1.0"
+  },
+  "browserslist": {	
+    "development": [	
+      "last 1 Chrome version"	
+    ],	
+    "production": [	
+      "defaults"	
+    ]	
   },
   "husky": {
     "hooks": {
