--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "cypress:open": "cypress open",
     "cypress:ci": "start-server-and-test 'RACK_ENV=test bundle exec rackup -p 9292' http-get://localhost:9292/health 'cypress run'",
     "start": "yarn build-admin-assets && yarn build-saml-assets && parcel serve ./client/src/index.tsx ",
-    "build": "yarn build-admin-assets && yarn build-saml-assets && parcel build ./client/src/index.tsx --dist-dir ./public",
+    "build": "parcel build ./client/src/index.tsx --dist-dir ./public",
     "typecheck": "tsc --noEmit -p client",
     "build-admin-assets": "parcel build assets/admin.* --dist-dir ./public",
     "build-saml-assets": "parcel build assets/saml.* --dist-dir ./public",
