--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "start-server": "bundle exec rackup -p 9292",
     "cypress:open": "cypress open",
     "cypress:ci": "start-server-and-test 'RACK_ENV=test bundle exec rackup -p 9292' http-get://localhost:9292/health 'cypress run'",
-    "start": "parcel serve ./client/src/index.tsx",
-    "build": "parcel build ./client/src/index.tsx --dist-dir ./public --log-level=error",
+    "start": "yarn build-admin-assets && yarn build-saml-assets && parcel serve ./client/src/index.tsx ",
+    "build": "yarn build-admin-assets && yarn build-saml-assets && parcel build ./client/src/index.tsx --dist-dir ./public --log-level=error",
     "typecheck": "tsc --noEmit -p client",
-    "clean": "rm -rf client/dist && rm -rf .parcel-cache",
+    "build-admin-assets": "parcel build assets/admin.* --dist-dir ./public --log-level=error",
+    "build-saml-assets": "parcel build assets/saml.* --dist-dir ./public --log-level=error",
+    "clean": "rm -rf client/dist && rm -rf .parcel-cache && git clean -f ./public/",
     "test": "jest",
     "lint": "eslint 'client/src/**/*.{js,jsx,ts,tsx}'",
     "lintfix": "eslint 'client/src/**/*.{js,jsx,ts,tsx}' --fix"
