Add soft fail option

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -39,6 +39,10 @@ steps:
   - name: ":codeclimate:"
     commands:
       - '.buildkite/report-coverage.sh'
+    soft_fail:
+      - exit_status: 1
+
+  - wait
 
   - name: ":broom:"
     commands: "yarn clean"
