--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -39,8 +39,7 @@ steps:
   - name: ":codeclimate:"
     commands:
       - '.buildkite/report-coverage.sh'
-    soft_fail:
-      - exit_status: 1
+    soft_fail: true
 
   - wait
 
