dynos for release and run

--- a/app.json
+++ b/app.json
@@ -67,6 +67,14 @@
     "web": {
       "quantity": 1,
       "size": "hobby"
+    },
+    "release": {
+      "quantity": 0,
+      "size": "hobby"
+    },
+    "run": {
+      "quantity": 0,
+      "size": "hobby"
     }
   },
   "scripts": {
