--- a/app.json
+++ b/app.json
@@ -63,7 +63,7 @@
       }]
     }
   },
-  "formation": [{
+  "formation": {
     "web": {
       "type": "web",
       "quantity": 1,
@@ -72,12 +72,8 @@
     "release": {
       "quantity": 1,
       "size": "hobby"
-    },
-    "run": {
-      "quantity": 1,
-      "size": "hobby"
     }
-  }],
+  },
   "scripts": {
     "postdeploy": "bundle exec rake osso:bootstrap"
   }
