--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "@ant-design/colors": "^5.0.1",
     "@ant-design/icons": "^4.2.2",
     "@enterprise-oss/ant-theme": "^1.0.7",
-    "@enterprise-oss/osso": "^0.1.1",
+    "@enterprise-oss/osso": "^0.1.2-alpha",
     "antd": "^4.9.4",
     "date-fns": "^2.16.1",
     "prop-types": "^15.7.2",
