Invite and Login UX (#576)
The primary changes here are to push login and account verification down to the client app.

This also updates copy on the account verification (invitation) emails.

--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
     "start-server": "bundle exec rackup -p 9292",
     "cypress:open": "cypress open",
     "cypress:ci": "start-server-and-test 'RACK_ENV=test bundle exec rackup -p 9292' http-get://localhost:9292/health 'cypress run'",
-    "start": "yarn build-admin-assets && yarn build-saml-assets && parcel serve ./client/src/index.tsx ",
-    "build": "yarn build-admin-assets && yarn build-saml-assets && parcel build ./client/src/index.tsx --dist-dir ./public --log-level=error",
+    "start": "yarn build-saml-assets && parcel serve ./client/src/index.tsx ",
+    "build": "yarn build-saml-assets && parcel build ./client/src/index.tsx --dist-dir ./public --log-level=error",
     "typecheck": "tsc --noEmit -p client",
-    "build-admin-assets": "parcel build assets/admin.* --dist-dir ./public --log-level=error",
     "build-saml-assets": "parcel build assets/saml.* --dist-dir ./public --log-level=error",
     "clean": "rm -rf client/dist && rm -rf .parcel-cache && git clean -f ./public/",
     "test": "jest",
@@ -64,7 +63,7 @@
     "@ant-design/colors": "^5.0.1",
     "@ant-design/icons": "^4.2.2",
     "@enterprise-oss/ant-theme": "^1.0.7",
-    "@enterprise-oss/osso": "^0.1.1",
+    "@enterprise-oss/osso": "^0.1.2-alpha",
     "antd": "^4.9.4",
     "date-fns": "^2.16.1",
     "prop-types": "^15.7.2",
