add sentry and posthog to client and api

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,4 @@
 BASE_URL=http://localhost:9292
 JWT_URL=http://localhost:4567/jwt_login
+POSTHOG_API_KEY=vA_-INs6HpnuVrh6n-dLDMvZeuJoJf8LRtltVcuNRDc
+POSTHOG_HOST=https://a.ossoapp.com
