--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "license": "SEE LICENSE IN LICENSE",
   "scripts": {
-    "start-server": "bundle exec rackup -p 9292",
+    "start:server": "RACK_ENV=test bundle exec rackup -p 9292",
+    "start:spec_sp": "cd ./spec/support/spec_sp/ && RACK_ENV=test bundle exec rackup -p 4567",
     "cypress:open": "cypress open",
-    "cypress:ci": "start-server-and-test 'RACK_ENV=test bundle exec rackup -p 9292' http-get://localhost:9292/health 'cypress run'",
+    "cypress:ci": "start-test start:server http-get://localhost:9292/health start:spec_sp http-get://localhost:4567/ 'cypress run'",
     "start": "yarn build-saml-assets && parcel serve ./client/src/index.tsx ",
     "build": "yarn build-saml-assets && parcel build ./client/src/index.tsx --dist-dir ./public --log-level=error",
     "typecheck": "tsc --noEmit -p client",
