install gems for sp app

--- a/spec/support/spec_sp/Gemfile
+++ b/spec/support/spec_sp/Gemfile
@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-gem 'omniauth-osso'
+gem 'omniauth-osso', path: '../../../../omniauth-osso'
 gem 'rake'
 gem 'sinatra'
 gem 'sinatra-contrib', require: 'sinatra/extension'
