--- a/spec/support/spec_sp/Gemfile
+++ b/spec/support/spec_sp/Gemfile
@@ -2,7 +2,7 @@
 
 source 'https://rubygems.org'
 
-gem 'omniauth-osso', '~> 0.1.8'
+gem 'omniauth-osso'
 gem 'rake'
 gem 'sinatra'
 gem 'sinatra-contrib', require: 'sinatra/extension'
