--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "cypress:open": "cypress open",
     "cypress:ci": "start-test start:server http-get://localhost:9292/health start:spec_sp http-get://localhost:4567/ 'cypress run'",
     "start": "yarn build-saml-assets && parcel serve ./client/src/index.tsx ",
-    "build": "yarn build-saml-assets && parcel build ./client/src/index.tsx --dist-dir ./public --log-level=error",
-    "typecheck": "tsc --noEmit -p client",
-    "build-saml-assets": "parcel build assets/saml.* --dist-dir ./public --log-level=error",
-    "clean": "rm -rf client/dist && rm -rf .parcel-cache && git clean -f ./public/",
+    "build": "yarn build-saml-assets && parcel build ./client/src/index.tsx --dist-dir ./public --log-level=verbose",
+    "typecheck": "tsc --project client/tsconfig.json",
+    "build-saml-assets": "parcel build assets/saml.* --dist-dir ./public",
+    "clean": "rm -rf client/dist && rm -rf .parcel-cache && git clean -f -x ./public/",
     "test": "jest",
     "lint": "eslint 'client/src/**/*.{js,jsx,ts,tsx}'",
     "lintfix": "eslint 'client/src/**/*.{js,jsx,ts,tsx}' --fix"
@@ -20,6 +20,7 @@
     "@babel/preset-typescript": "^7.12.13",
     "@parcel/transformer-less": "^2.0.0-alpha.3",
     "@parcel/transformer-svg-react": "^2.0.0-nightly.1739",
+    "@rfgamaral/parcel-plugin-typings-for-css-modules": "^1.0.4",
     "@svgr/parcel-plugin-svgr": "^5.4.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -51,7 +52,7 @@
     "jest": "^26.6.3",
     "jest-fetch-mock": "^3.0.3",
     "less": "^4.1.1",
-    "parcel": "2.0.0-nightly.574",
+    "parcel": "2.0.0-nightly.522",
     "parcel-plugin-bundle-visualiser": "^1.2.0",
     "postcss": "^8.2.5",
     "postcss-modules": "^4.0.0",
