--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
     "cypress:open": "cypress open",
     "cypress:ci": "start-test start:server http-get://localhost:9292/health start:spec_sp http-get://localhost:4567/ 'cypress run'",
     "start": "yarn build-saml-assets && parcel serve ./client/src/index.tsx ",
-    "build": "yarn build-saml-assets && parcel build ./client/src/index.tsx --dist-dir ./public --log-level=verbose",
+    "build": "yarn build-saml-assets && parcel build ./client/src/index.tsx --dist-dir ./public --log-level=warn",
     "typecheck": "tcm client/src && tsc --noEmit --project client/tsconfig.json && git clean client/src -f -x",
     "build-saml-assets": "parcel build assets/saml.* --dist-dir ./public",
     "clean": "rm -rf client/dist && rm -rf .parcel-cache && git clean -f -x ./public/",
     "test": "jest",
     "lint": "eslint 'client/src/**/*.{js,jsx,ts,tsx}'",
-    "lintfix": "eslint 'client/src/**/*.{js,jsx,ts,tsx}' --fix"
+    "lintfix": "eslint 'client/src/**/*.{js,jsx,ts,tsx}' --fix",
+    "postinstall": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
     "@babel/plugin-proposal-optional-chaining": "^7.12.13",
     "@babel/preset-typescript": "^7.12.13",
+    "@parcel/babel-preset-env": "^2.0.0-alpha.3",
     "@parcel/transformer-less": "^2.0.0-alpha.3",
     "@parcel/transformer-svg-react": "^2.0.0-nightly.1739",
     "@rfgamaral/parcel-plugin-typings-for-css-modules": "^1.0.4",
@@ -47,13 +51,14 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "faker": "^5.3.1",
-    "husky": "^5.0.9",
+    "husky": "5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-fetch-mock": "^3.0.3",
     "less": "^4.1.1",
     "parcel": "2.0.0-nightly.579",
     "parcel-plugin-bundle-visualiser": "^1.2.0",
+    "pinst": "^2.1.4",
     "postcss": "^8.2.5",
     "postcss-modules": "^4.0.0",
     "prettier": "^2.2.1",
@@ -84,11 +89,6 @@
     "production": [
       "defaults"
     ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yalc check"
-    }
   },
   "jest": {
     "moduleNameMapper": {
