--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@babel/plugin-proposal-optional-chaining": "^7.12.16",
     "@babel/preset-typescript": "^7.12.16",
     "@parcel/babel-preset-env": "^2.0.0-alpha.3",
-    "@parcel/transformer-less": "^2.0.0-alpha.3",
+    "@parcel/optimizer-cssnano": "2.0.0-nightly.599",
+    "@parcel/packager-css": "2.0.0-nightly.599",
+    "@parcel/transformer-css": "2.0.0-nightly.599",
+    "@parcel/transformer-less": "^2.0.0-nightly.599",
+    "@parcel/transformer-postcss": "^2.0.0-nightly.599",
     "@parcel/transformer-svg-react": "^2.0.0-nightly.1739",
     "@rfgamaral/parcel-plugin-typings-for-css-modules": "^1.0.4",
     "@svgr/parcel-plugin-svgr": "^5.4.0",
