--- a/app.json
+++ b/app.json
@@ -23,7 +23,7 @@
   ],
   "env": {
     "ADMIN_EMAIL": {
-      "description": "Your email address for creating the first user account",
+      "description": "Your email address for creating the first user account"
     },
     "BASE_URL": {
       "description": "The host where your application is deployed - replace APP-NAME with the app name you choose above, and be usre to update this ENV var when you set up a custom domain",
