--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "@babel/plugin-proposal-optional-chaining": "^7.12.16",
     "@babel/preset-typescript": "^7.12.16",
     "@parcel/babel-preset-env": "^2.0.0-alpha.3",
-    "@parcel/optimizer-cssnano": "2.0.0-nightly.599",
-    "@parcel/packager-css": "2.0.0-nightly.599",
-    "@parcel/transformer-css": "2.0.0-nightly.599",
-    "@parcel/transformer-less": "^2.0.0-nightly.599",
-    "@parcel/transformer-postcss": "^2.0.0-nightly.599",
+    "@parcel/optimizer-cssnano": "2.0.0-nightly.600",
+    "@parcel/packager-css": "2.0.0-nightly.600",
+    "@parcel/transformer-css": "2.0.0-nightly.600",
+    "@parcel/transformer-less": "2.0.0-nightly.600",
+    "@parcel/transformer-postcss": "2.0.0-nightly.600",
     "@parcel/transformer-svg-react": "^2.0.0-nightly.1739",
     "@rfgamaral/parcel-plugin-typings-for-css-modules": "^1.0.4",
     "@svgr/parcel-plugin-svgr": "^5.4.0",
@@ -60,7 +60,7 @@
     "jest": "^26.6.3",
     "jest-fetch-mock": "^3.0.3",
     "less": "^4.1.1",
-    "parcel": "2.0.0-nightly.597",
+    "parcel": "2.0.0-nightly.598",
     "parcel-plugin-bundle-visualiser": "^1.2.0",
     "pinst": "^2.1.4",
     "postcss": "^8.2.6",
